# reworked-cli-builder

./: pyproject.toml  setup.py
connection-manager/: README.md  pyproject.toml
connection-manager/src/connection_manager/: __init__.py
connection-manager/src/connection_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
connection-manager/src/connection_manager/cli/: main.py
connection-manager/src/connection_manager/core/: __init__.py  config.py  ssh.py
connection-manager/src/connection_manager/utils/: health.py
src/connection_manager/: __main__.py
src/connection_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/connection_manager/cli/: main.py
src/connection_manager/core/: config.py  ssh.py
src/connection_manager/utils/: __init__.py
